--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "bench-file-dep-hash": "tsm ./test/benchs.ts",
     "build": "vitest run && vite build"
   },
   "module": "./dist/vite-plugin-linaria.es.js",
@@ -21,8 +22,10 @@
     "@types/node": "^17.0.9",
     "@vitest/ui": "0.10.2",
     "tslib": "^2.4.0",
+    "tsm": "^2.2.1",
     "typescript": "^4.6.4",
     "vite": "2.9.7",
-    "vitest": "0.10.2"
+    "vitest": "0.10.2",
+    "v8-profiler-next": "^1.5.1"
   }
 }
