--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
   "name": "vite-plugin-linaria-persistent-dev-cache",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "bench-file-dep-hash": "tsm ./test/benchs.ts",
-    "build": "vitest run && vite build"
+    "build": "vitest run && tsc -p tsconfig.prod.json",
+    "npm-publish": "pnpm run build && npm publish"
   },
-  "module": "./dist/vite-plugin-linaria.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/vite-plugin-linaria.es.js"
-    }
+  "files": [
+    "dist"
+  ],
+  "author": "Lucas Santos",
+  "main": "./dist/vite-plugin-linaria.js",
+  "types": "./dist/vite-plugin-linaria.d.ts",
+  "engines": {
+    "node": ">=14.6.0"
   },
   "devDependencies": {
     "@linaria/babel-preset": "^3.0.0-beta.18",
+    "vite": "^2.9.7",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/node": "^17.0.9",
     "@vitest/ui": "0.10.2",
+    "rollup-plugin-dts": "^4.2.1",
     "tslib": "^2.4.0",
     "tsm": "^2.2.1",
     "typescript": "^4.6.4",
-    "vite": "2.9.7",
-    "vitest": "0.10.2",
-    "v8-profiler-next": "^1.5.1"
+    "v8-profiler-next": "^1.5.1",
+    "vitest": "0.10.2"
+  },
+  "peerDependencies": {
+    "vite": "^2.9.7",
+    "@linaria/babel-preset": "^3.0.0-beta.18"
   }
 }
