--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-linaria-persistent-dev-cache",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "license": "MIT",
   "scripts": {
     "test": "vitest",
@@ -20,7 +20,7 @@
     "node": ">=14.6.0"
   },
   "devDependencies": {
-    "@linaria/babel-preset": "^3.0.0-beta.18",
+    "@linaria/babel-preset": "~3.0.0-beta.18",
     "vite": "^2.9.7",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/node": "^17.0.9",
@@ -34,6 +34,6 @@
   },
   "peerDependencies": {
     "vite": "^2.9.7",
-    "@linaria/babel-preset": "^3.0.0-beta.18"
+    "@linaria/babel-preset": "~3.0.0-beta.18"
   }
 }
