--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">=14.6.0"
   },
   "devDependencies": {
-    "@linaria/babel-preset": "~3.0.0-beta.18",
+    "@linaria/babel-preset": "3.0.0-beta.18",
     "vite": "^2.9.7",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/node": "^17.0.9",
@@ -34,6 +34,6 @@
   },
   "peerDependencies": {
     "vite": "^2.9.7",
-    "@linaria/babel-preset": "~3.0.0-beta.18"
+    "@linaria/babel-preset": "3.0.0-beta.18"
   }
 }
