--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "forceConsistentCasingInFileNames": true,
-    "keyofStringsOnly": true
+    "keyofStringsOnly": true,
+    "noUnusedLocals": true,
+    "strictPropertyInitialization": true
   }
 }
