Fix deps calcs inconsistent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "editor.foldingImportsByDefault": false
+  "editor.foldingImportsByDefault": false,
+  "testing.automaticallyOpenPeekView": "never"
 }
