--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
   },
   "devDependencies": {
     "@linaria/babel-preset": "3.0.0-beta.18",
-    "vite": "^2.9.7",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/node": "^17.0.9",
     "@vitest/ui": "0.10.2",
+    "dequal": "^2.0.2",
     "rollup-plugin-dts": "^4.2.1",
     "tslib": "^2.4.0",
     "tsm": "^2.2.1",
     "typescript": "^4.6.4",
     "v8-profiler-next": "^1.5.1",
-    "vitest": "0.10.2"
+    "vite": "^2.9.7",
+    "vitest": "0.14.1"
   },
   "peerDependencies": {
-    "vite": "^2.9.7",
-    "@linaria/babel-preset": "3.0.0-beta.18"
+    "@linaria/babel-preset": "3.0.0-beta.18",
+    "vite": "^2.9.7"
   }
 }
