--- a/package.json
+++ b/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "vite-plugin-linaria-persistent-dev-cache",
-  "version": "1.2.0",
-  "license": "MIT",
+  "packageManager": "pnpm@7.5.0",
   "scripts": {
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "bench-file-dep-hash": "tsm ./test/benchs.ts",
-    "build": "vitest run && tsc -p tsconfig.prod.json",
-    "build-no-test": "tsc -p tsconfig.prod.json",
-    "npm-publish": "./scripts/check-if-is-sync.sh && pnpm run build && npm publish"
-  },
-  "files": [
-    "dist"
-  ],
-  "repository": "github:lucaslos/vite-plugin-linaria-persistent-dev-cache",
-  "author": "Lucas Santos",
-  "main": "./dist/vite-plugin-linaria.js",
-  "types": "./dist/vite-plugin-linaria.d.ts",
-  "engines": {
-    "node": ">=14.6.0"
+    "build": "vitest run && pnpm --filter vite-plugin-linaria-persistent-dev-cache build",
+    "build:watch": "pnpm --filter vite-plugin-linaria-persistent-dev-cache build:watch",
+    "npm-publish": "scripts/check-if-is-sync.sh && pnpm run build && pnpm --filter vite-plugin-linaria-persistent-dev-cache npm-publish"
   },
   "devDependencies": {
-    "@linaria/babel-preset": "3.0.0-beta.18",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@types/node": "^17.0.9",
-    "@vitest/ui": "0.10.2",
-    "dequal": "^2.0.2",
-    "rollup-plugin-dts": "^4.2.1",
-    "tslib": "^2.4.0",
-    "tsm": "^2.2.1",
-    "typescript": "^4.6.4",
-    "v8-profiler-next": "^1.5.1",
     "vite": "^2.9.7",
-    "vitest": "0.14.1"
-  },
-  "peerDependencies": {
-    "@linaria/babel-preset": "3.0.0-beta.18",
-    "vite": "^2.9.7"
+    "vitest": "0.19.1",
+    "dequal": "^2.0.3",
+    "@types/node": "^18.6.3",
+    "@vitest/ui": "0.19.1",
+    "v8-profiler-next": "^1.9.0",
+    "tsm": "^2.2.2",
+    "typescript": "^4.7.4"
   }
 }
