--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:e2e": "pnpm --filter e2e-tests test",
     "bench-file-dep-hash": "tsm ./test/benchs.ts",
     "build": "vitest run && pnpm --filter vite-plugin-linaria-persistent-dev-cache build",
     "build:watch": "pnpm --filter vite-plugin-linaria-persistent-dev-cache build:watch",
