add e2e tests and fix bug in hot reload

--- a/lib/tsconfig.prod.json
+++ b/lib/tsconfig.prod.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "noEmit": false,
+    "module": "CommonJS",
     "declaration": true
   },
   "include": ["src/vite-plugin-linaria.ts"]
