--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "packageManager": "pnpm@7.5.0",
+  "type": "module",
   "scripts": {
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -11,7 +12,7 @@
     "npm-publish": "scripts/check-if-is-sync.sh && pnpm run build && pnpm --filter vite-plugin-linaria-persistent-dev-cache npm-publish"
   },
   "devDependencies": {
-    "vite": "^2.9.7",
+    "vite": "^2.9.14",
     "vitest": "0.19.1",
     "dequal": "^2.0.3",
     "@types/node": "^18.6.3",
@@ -19,5 +20,16 @@
     "v8-profiler-next": "^1.9.0",
     "tsm": "^2.2.2",
     "typescript": "^4.7.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "@linaria/core": "3.0.0-beta.18",
+      "@linaria/react": "3.0.0-beta.18",
+      "@linaria/shaker": "3.0.0-beta.18",
+      "@linaria/babel-preset": "3.0.0-beta.18",
+      "@linaria/preeval": "3.0.0-beta.18",
+      "@linaria/utils": "3.0.0-beta.18",
+      "@linaria/logger": "3.0.0-beta.15"
+    }
   }
 }
